--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Jorge Vargas</title>
+	</head>
+	<body>
+		<div>
+			<link rel="stylesheet" href="css/styles.css">
+			<h1>Jorge Vargas</h1>
+			<h2>Software Developer</h2>
+			
+			<img src="images/sloth.jpg" alt="sloth image" width="300" height="300" >
+			
+			<div class="p1">
+				<p class=""> I enjoy developing creative and professional solutions for clients</p>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
-</head>
+			</div>
 
-<body>
-    <H1>
-        My Portfolio
-    </H1>
-    <!-- 
-      Directions:
-        1. Create a DIV element to contain the page content
-        2. Inside your DIV, create an H1 tag that contains your name as the text
-        3. Below your H1 tag, create an H2 tag that contains the content text "Software Developer"
-        4. Below your H2 tag, create an HR tag which will make a horizontal line
-        5. Create a paragraph tag and put a sentence of your choice in it. (Suggestion: "My favorite thing about programming is _______")
-        6. Make the word "favorite" italicized
-        7. Make an image tag with the src attribute linked to a picture of yourself or of a placeholder image. Make sure you make an alt attribute too!
-        8. Create an H3 tag that says "About Me"
-        9. Create a paragraph tag that contains the "lorem ipsum" text. You will need to do a search for this text - it is long!
-        10. Create an H3 tag that says "My Projects"
-        11. Create an unordered list with 3 list items that say "Project 1", "Project 2", and "Project 3"
-        12. Add another H3 that contains "Contact Me" as text
-        13. Create a paragraph that contains a fake phone number, e.g., "Phone: (202) 555-1234"
-        14. Create a link tag (<a>) with a direction to mail to a fake email address. This is done by making a regular link, but in the href attribute, put mailto:fake@email.com (this opens up your email program with the TO field already filled out-try it!)
+			<h2>About Me</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Est ullamcorper eget nulla facilisi. Cursus vitae congue mauris rhoncus. 
+        Et tortor at risus viverra adipiscing at in tellus integer. Risus nullam eget felis eget nunc lobortis.</p>
+			
+			<img class="image1" src="images/sloth2.jpg" alt="sloth image1" width="300" height="300" .bottom="">
 
-        BONUS: Try one of the following ideas if you finish early
-          - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
-          - In your contact me section, make the text "Phone:" and "Email:" bolded
-     -->
-</body>
 
+
+			<h2>My Projects</h2>
+			<ul>
+				<li>Project 1</li>
+				<l1>Project 2</l1>
+				<li>Project 3</li>
+			</ul>
+			<h2>Contact Me</h2>
+			<p><strong>Phone:</strong> (123) 456-7890</p>
+			<p><strong>Email:</strong> <a href="mailto:something@gmail.com">something@gmail.com</a></p>
+			
+		</div>
+		
+	</body>
 </html>
